# DPUMesh

./: .gitmodules  README.md
DPUMesh/: buffer.c  buffer.h  build_dpacc.sh  comch_client.c  comch_client.h  comch_common.c  comch_common.h  comch_consumer.c  comch_consumer.h  comch_msgq.c  comch_msgq.h  comch_producer.c  comch_producer.h  comch_server.c  comch_server.h  common.c  common.h  config.c  config.h  dma.c  dma.h  dpa.c  dpa.h  dpa_common.h  dpa_resource_config.yaml  dpu_worker.c  dpu_worker.h  grpc_offload.c  grpc_offload.h  host_worker.c  host_worker.h  host_worker_bench.c  main.c  meson.build  meson_options.txt  object.c  object.h  ring.c  ring.h
DPUMesh/device/: dpa_kernel.c
DPUMesh/grpc/: grpc_offload.c  grpc_offload.h  grpc_wire_encode.c  grpc_wire_encode.h  proto_meta.h
benchmark/: CMakeLists.txt  hello.proto  host_pb_ser_bench.cc  run_host_pb_ser_bench.sh
gRPC/: arm_grpc_worker.cc  build_codegen_demo.sh  build_grpc_serializer_tests.sh  build_standalone_bench.sh  current_grpc_dpa_overall_flow_ko.md  dmesh_grpc_api.cc  dmesh_grpc_api.h  dpa_batch_worker.c  grpc_bench_main.cc  grpc_dma_zero_copy_design.md  grpc_dpa_kernel.c  grpc_dpa_offload.h  grpc_dpa_serializer_patch_plan_ko.md  grpc_dpa_serializer_patch_report_ko.md  grpc_proto_codegen_design.md  grpc_ring_loop.c  grpc_ring_loop.h  grpc_ring_sharding_design_ko.md  grpc_selective_policy_runtime.cc  grpc_selective_policy_runtime.h  grpc_serialization_offload_flow_step_by_step_ko.md  grpc_shard_routing.cc  grpc_shard_routing.h  grpc_wire_encode.c  hello.proto  host_agent.cc  host_agent.h  offload_benchmark.cc  offload_benchmark.h  offload_benchmark_README.md  offload_flow_current.md  offload_flow_sequence.mmd  proto_meta.h  run_demo_grpc_workflow.sh  run_dpu_arm_bench.sh
gRPC/build_codegen_demo/: grpc_codegen_smoke
gRPC/build_grpc_serializer_tests/: grpc_serializer_golden_test  grpc_sharded_worker_test
gRPC/build_standalone/: grpc_offload_bench
gRPC/codegen/: proto_codegen_stub.py
gRPC/framework/common/: grpc_codegen_common.h
gRPC/framework/dpa/: grpc_dpa_emit_generic.c  grpc_dpa_emit_iface.h
gRPC/framework/ir/: grpc_exec_plan.h
gRPC/framework/lowering/: grpc_lowering.cc  grpc_lowering.h
gRPC/framework/policy/: grpc_dma_safety.h  grpc_selective_policy.cc  grpc_selective_policy.h
gRPC/framework/runtime/: grpc_completion_stage.h  grpc_transport_stage.cc  grpc_transport_stage.h
gRPC/framework/schema/: grpc_schema_desc.h  grpc_schema_registry.cc  grpc_schema_registry.h
gRPC/tests/: grpc_codegen_smoke.cc  grpc_codegen_verify.cc  grpc_codegen_verify.h  grpc_serializer_golden_test.cc  grpc_sharded_worker_test.cc
